CICO-41808 fix yotel alignment

--- a/zest_station/css/themes/yotel/theme.less
+++ b/zest_station/css/themes/yotel/theme.less
@@ -501,7 +501,6 @@
 }
 #main.centered #content.input-field-contents {
     height: 100% !important;
-    padding-top: 7%;
     .form {
         .input{
             border: 2px white solid !important;
@@ -565,5 +564,5 @@
 }
 
 .add-guest-mode-content{
-    height: 125% !important;
+    height: 100% !important;
 }
